--- a/APPTest/src/main/res/values/strings.xml
+++ b/APPTest/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AppFactoryTest</string>
     <string name="lib_bihe0832_file_folder">zixie/</string>
+    <color name="common_activity_bg">@color/colorPrimaryDark</color>
 </resources>
