--- a/APPTest/src/main/res/values/strings.xml
+++ b/APPTest/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">AAFTest</string>
     <string name="lib_bihe0832_file_folder">zixie/</string>
     <color name="common_activity_bg">@color/colorPrimaryDark</color>
+    <string name="update_url">https://android.bihe0832.com/update/get_apk.json</string>
+
 </resources>
