--- a/APPTest/src/main/res/values/strings.xml
+++ b/APPTest/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <color name="common_activity_bg">@color/colorPrimaryDark</color>
-    <string name="update_url">https://cdn.bihe0832.com/app/update/get_apk.json</string>
+<!--    <string name="update_url">https://cdn.bihe0832.com/app/update/get_apk.json</string>-->
     <string name="version_url">https://cdn.bihe0832.com/app/help/zapk.html</string>
 <!--    <string name="agreement_url">https://blog.bihe0832.com</string>-->
 <!--    <string name="privacy_url">https://blog.bihe0832.com</string>-->
