--- a/LibFile/src/main/res/values/strings.xml
+++ b/LibFile/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <!--  应用下载的目录名称  -->
-    <string name="lib_bihe0832_file_folder">Download/</string>
+    <string name="lib_bihe0832_file_folder"></string>
 </resources>
