--- a/LibRefresh/src/main/res/values/strings.xml
+++ b/LibRefresh/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="header_reset">下拉刷新</string>
-    <string name="header_pull">下拉刷新</string>
-    <string name="header_pull_over">释放立即刷新</string>
-    <string name="header_refreshing">正在刷新...</string>
-    <string name="header_completed">刷新成功</string>
+    <string name="com_bihe0832_header_reset">下拉刷新</string>
+    <string name="com_bihe0832_header_pull">下拉刷新</string>
+    <string name="com_bihe0832_header_pull_over">释放立即刷新</string>
+    <string name="com_bihe0832_header_refreshing">正在刷新...</string>
+    <string name="com_bihe0832_header_completed">刷新成功</string>
 </resources>
