--- a/LibFile/src/main/res/values/strings.xml
+++ b/LibFile/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="lib_bihe0832_file_folder"></string>
+    <string name="lib_bihe0832_file_folder">Download/</string>
 </resources>
