简单的消息公告，增加应用更新异常跳转到反馈， 修复应用下载的bug

--- a/APPTest/src/main/res/values/strings.xml
+++ b/APPTest/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="update_url">https://cdn.bihe0832.com/app/update/get_apk.json</string>
     <string name="version_url">https://cdn.bihe0832.com/app/help/zapk.html</string>
+    <string name="message_url">https://cdn.bihe0832.com/app/msg/aaf_msg_debug.json</string>
+
     <string name="com_bihe0832_web_process_name"></string>
 
     <!--    <string name="agreement_url">https://blog.bihe0832.com</string>-->
