--- a/APPTest/src/main/res/values/strings.xml
+++ b/APPTest/src/main/res/values/strings.xml
@@ -5,6 +5,12 @@
 
     <string name="com_bihe0832_web_process_name"></string>
 
+<!--    <color name="com_bihe0832_message_item_bg_color">@color/colorPrimary</color>-->
+<!--    <color name="com_bihe0832_message_item_title_color">@color/colorOnPrimary</color>-->
+<!--    <color name="com_bihe0832_message_item_time_color">@color/colorOnPrimary</color>-->
+<!--    <color name="com_bihe0832_message_item_time_divider">@color/colorPrimaryLight</color>-->
+
+
     <!--    <string name="agreement_url">https://blog.bihe0832.com</string>-->
     <!--    <string name="privacy_url">https://blog.bihe0832.com</string>-->
     <!--    <string name="privacy_agreement_content">请你务必审慎阅读、充分理解「用户协议」和「隐私政策」各条款，包括但不限于：为了向你提供应用管理、内容分享等服务，我们需要收集你的设备信息、操作日志、用户网络等个人信息。你可以在「设置」中管理你的授权。&lt;BR&gt; 你可阅读&lt;font color=\'#428bca\'&gt;「隐私政策」&lt;/font&gt;和&lt;font color=\'#428bca\'&gt;「用户协议」&lt;/font&gt;了解详细信息。如你同意，请点击「同意」开始接受我们的服务</string>-->
